work on the card flips probably cleaner to have 3 different ones

--- a/src/page_styling/home-grid.scss
+++ b/src/page_styling/home-grid.scss
@@ -1,17 +1,17 @@
 .home {
   display: grid;
   grid-template-areas:
-    'intro intro intro .'
-    'description links links .'
-    'information information information .'
-    'navigate navigate navigate .';
+    "intro intro intro ."
+    "description description links ."
+    "information information information ."
+    "navigate navigate navigate .";
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 0.5fr 0.5fr 4fr 1.5fr;
   color: white;
   width: 100vw;
   height: 100vh;
   background-color: $darkgrey;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   padding-left: 4%;
   align-items: center;
 }
@@ -19,7 +19,10 @@
 // blinking intro text
 
 .grid-intro {
-  grid-area: intro;
+  grid-area: description;
+  height: 100%;
+  display: flex;
+  align-items: center;
   text-shadow: 0 0 7px #c8c8c8;
   font-size: 3rem;
   align-self: flex-end;
@@ -31,12 +34,11 @@
 }
 
 .lineOne::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 1px;
   height: 3rem;
-  right: 0;
-  top: 1px;
+  margin-top: 5px;
   border-right: 2px solid white;
   -webkit-animation: blink 0.5s infinite ease;
   animation: blink 0.5s infinite ease;
@@ -123,6 +125,12 @@
 @media (max-width: 500px) {
   .one_year {
     display: none;
+  }
+  .grid-intro {
+    font-size: 2rem;
+  }
+  .lineOne::after {
+    height: 2rem;
   }
 }
 
