--- a/src/page_styling/skills-grid.scss
+++ b/src/page_styling/skills-grid.scss
@@ -3,4 +3,7 @@
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-gap: 1rem;
   color: black;
+  justify-items: center;
+  align-items: center;
+  height: 100%;
 }
