--- a/src/page_styling/home.scss
+++ b/src/page_styling/home.scss
@@ -167,7 +167,7 @@
   height: 90%;
 }
 .project-front {
-  background-color: #1c2934;
+  background-color: transparent;
 }
 
 .project-flip {
@@ -179,7 +179,7 @@
   width: 33%;
   height: 30%;
   margin: 3%;
-  background-color: #3a3b3d;
+  background-color: transparent;
   border: 2px solid #f3bf08;
 }
 
