--- a/src/page_styling/home.scss
+++ b/src/page_styling/home.scss
@@ -154,9 +154,7 @@
 .project-btn {
   color: #f3bf08;
   background-color: transparent;
-  border: 1px solid white;
-  border-radius: 5%;
-  margin-left: 1%;
+  border: none;
 }
 
 // from here projects section
