--- a/src/index.scss
+++ b/src/index.scss
@@ -147,17 +147,13 @@ bootstrap-link:focus {
   .web_wrapper_grid {
     display: grid;
     grid-template-areas:
-      "logo logo logo logo logo logo"
       "proj proj proj proj proj proj"
       ". arrowback arrowback arrowforward arrowforward .";
-    grid-template-rows: 0.5fr 1fr 0.5fr;
+    grid-template-rows: 1fr 0.5fr;
     grid-template-columns: repeat(6, 1fr);
-    margin-top: 0;
+    margin-top: 5vh;
   }
-  .portfolio_grid_wrapper {
-    margin-right: 17%;
-    margin-top: 35vh;
-  }
+
   .contact_page {
     overflow: hidden;
     background-color: #111;
@@ -166,9 +162,14 @@ bootstrap-link:focus {
     padding-top: 0vh;
   }
   .portfolio_grid_wrapper {
-    display: block;
-    grid-template-rows: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-right: 17%;
+    margin-top: 0;
   }
+
   .one_education {
     width: 20%;
   }
